--- a/common/etc/nginx/nginx.conf
+++ b/common/etc/nginx/nginx.conf
@@ -11,6 +11,7 @@ load_module modules/ngx_http_js_module.so;
 env S3_ACCESS_KEY_ID;
 env S3_SECRET_KEY;
 env S3_BUCKET_NAME;
+env S3_BUCKET_TOEKN;
 env S3_SERVER;
 env S3_SERVER_PORT;
 env S3_SERVER_PROTO;
